# This file is part of priority. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/priority/master/COPYRIGHT. No part of priority, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2016 The developers of priority. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/priority/master/COPYRIGHT.

[package]
name = "priority"
description = "priority"
keywords = ["priority"]
license = "MIT"
authors = ["Raphael Cohn <raphael.cohn@stormmq.com>"]
documentation = "https://github.com/lemonrock/priority/blob/master/README.md"
homepage = "https://github.com/lemonrock/priority"
repository = "https://github.com/lemonrock/priority.git"
exclude = ["*"]
include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "benches/**/*.rs", "examples/**/*.rs", "tests/**/*.rs", "Cargo.toml", "rustfmt.toml", "clippy.toml"]
# Relative to Cargo.toml
readme = "README.md"
publish = false
version = "0.0.0"

[replace]
"libc:0.2.11" = { git = "https://github.com/lemonrock/libc", branch = "getpriority" }

[dependencies]
libc = "0.2.11"
errno = "^0.1"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
